# ructf-2021

./: .gitignore  README.md
.github/workflows/: check_Metrics.yml  check_all.yml  check_demo.yml  check_employeexer.yml  check_spotiflag.yml  check_trackbattle.yml  check_white_album.yml  generate_workflows.py  rebuild_image.yml
ansible/: .gitignore  autopull_and_deploy_checkers.sh  cs-deploy-checkers.yml  inventory.cfg  monitoring.yaml
ansible/group_vars/: cs
checkers/Metricks/: checker.py  errs.py
checkers/employeexer/: checker.py  generators.py  make_protobuf_module.sh  request.proto  request_pb2.py  requirements.txt
checkers/metrics/: api.py  checker.py
checkers/spotiflag/: api.py  checker.py  generator.py  requirements.txt
checkers/studio/: checker.py  checker_payload  payload_generator.py  requirements.txt  user_agent_randomizer.py
checkers/trackbattle/: checker.py  trackbattle.checker.py
checkers/white_album/: checker.py  client.py  utils.py
image/: build.pck.hcl  build_and_export_image.sh
internal/spotiflag/: Makefile
services/MagicService/: docker-compose.yml  pom.xml
services/Metrics/: .project  Dockerfile  docker-compose.yml  pom.xml
services/demo/: docker-compose.yaml
services/studio/deallocmemory/: .gitignore  CMakeLists.txt  build.sh  deallocmemory  main.c
services/studio/getmemory/: .gitignore  CMakeLists.txt  Dockerfile  README.MD  build.sh  main.c
vuln_image/: README.md  encrypt_image.sh  image.pkr.hcl  image.yml  rebuild_image.sh  rebuild_studio_image.sh  studio_image.yml
vuln_image_packer/: image.pkr.hcl
(+4445 files in other folders)
